<resources>
    <string name="app_name">MD3 Methodology</string>
    <string name="you_will_complete_tasks_using_different_ui_controls_n_nthe_experiment_compares_48dp_and_32dp_touch_targets_n_ntap_each_control_as_quickly_and_accurately_as_possible">You will complete tasks using different UI controls.\n\nThe experiment compares 48dp and 32dp touch targets.\n\nTap each control as quickly and accurately as possible.</string>
    <string name="touch_target_experiment">Touch Target Experiment</string>
    <string name="start_experiment">Start Experiment</string>
    <string name="tap">Tap</string>
    <string name="_32dp_targets">32dp Targets</string>
    <string name="time_0_ms">Time: 0 ms</string>
    <string name="mistaps_0">MisTaps: 0</string>
    <string name="experiment_results">Experiment Results</string>
    <string name="_48dp_targets">48dp Targets</string>
    <string name="back_to_home">Back to Home</string>
    <string name="trial_1_2">Trial 1 / 2</string>
    <string name="target_counter">48dp Targets - Trial 1/2</string>
    <string name="target_counter32">32dp Targets - Trial 1/2</string>
    <string name="misclicks">Misclicks:</string>
    <string name="misclicks_0">Misclicks: 0</string>
    <string name="stage1_summary">Time: 0 ms\nMisclickss: 0\nRuns: 0\nAverage: 0 ms</string>
    <string name="stage_1_complete">Stage 1 Complete</string>
    <string name="take_a_short_breather_tap_next_when_ready">Take a short breather. Tap Next when ready.</string>
    <string name="the_same_experiment_will_continue_using_smaller_32dp_touch_targets">The same experiment will continue using smaller 32dp touch targets.</string>
    <string name="next">Next</string>
    <string name="the_same_experiment_will_continue_with_different_touch_targets">The same experiment will continue with different touch targets.</string>
    <string name="stage_complete">Stage Complete</string>
    <string name="you_will_complete_several_trials_using_different_ui_controls_n_n_the_experiment_measures_how_touch_target_size_affects_speed_and_accuracy_n_n_tap_each_control_as_quickly_and_accurately_as_possible">You will complete several trials using different UI controls.\n\n The experiment measures how touch target size affects speed and accuracy.\n\n Tap each control as quickly and accurately as possible.</string>
</resources>