<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top|center"
    android:padding="24dp"
    android:background="#0F2027">

    <TextView
        android:id="@+id/transitionTitle"
        android:text="@string/stage_1_complete"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"/>

    <TextView
        android:id="@+id/transitionSubtitle"
        android:text="@string/take_a_short_breather_tap_next_when_ready"
        android:textSize="14sp"
        android:textColor="#B8DDE6"
        android:layout_marginBottom="22dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/transitionCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#203A43"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:elevation="6dp">

        <TextView
            android:text="Previous Condition Summary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/transitionStats"
            android:text="@string/stage1_summary"
            android:textSize="18sp"
            android:textColor="#E0F7FA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_same_experiment_will_continue_using_smaller_32dp_touch_targets"
        android:textSize="16sp"
        android:textColor="#E0F7FA"
        android:layout_marginTop="18dp"
        android:gravity="center"/>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#203A43"
        android:paddingHorizontal="28dp"
        android:paddingVertical="10dp"
        android:text="@string/next"
        android:textColor="#FFFFFF"
        android:layout_marginTop="50dp"
        android:textSize="16sp" />

</LinearLayout>