<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0F2027"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/touch_target_experiment"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/you_will_complete_several_trials_using_different_ui_controls_n_n_the_experiment_measures_how_touch_target_size_affects_speed_and_accuracy_n_n_tap_each_control_as_quickly_and_accurately_as_possible"
        android:textColor="#CFE8F3"
        android:textSize="16sp" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#203A43"
        android:elevation="6dp"
        android:layout_marginTop="100dp"
        android:paddingHorizontal="36dp"
        android:paddingVertical="14dp"
        android:text="@string/start_experiment"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

</LinearLayout>